<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/White"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:background="@color/MaltabuGrey"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/phn_txt"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_26sdp"
                android:textColor="@color/Black"
                android:textSize="@dimen/_14ssp"
                android:text="@string/contest_field_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:inputType="phone"
                android:id="@+id/contest_phone"
                app:layout_constraintTop_toBottomOf="@id/phn_txt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:background="@drawable/rounded"
                android:padding="@dimen/_3sdp"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/first_name_txt"
                app:layout_constraintTop_toBottomOf="@+id/contest_phone"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:textColor="@color/Black"
                android:textSize="@dimen/_14ssp"
                android:text="@string/contest_field_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/contest_first_name"
                app:layout_constraintTop_toBottomOf="@id/first_name_txt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:background="@drawable/rounded"
                android:padding="@dimen/_3sdp"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/last_name_txt"
                app:layout_constraintTop_toBottomOf="@+id/contest_first_name"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:textColor="@color/Black"
                android:textSize="@dimen/_14ssp"
                android:text="@string/contest_field_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/contest_last_name"
                app:layout_constraintTop_toBottomOf="@id/last_name_txt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:background="@drawable/rounded"
                android:padding="@dimen/_3sdp"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/sur_name_txt"
                app:layout_constraintTop_toBottomOf="@+id/contest_last_name"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:textColor="@color/Black"
                android:textSize="@dimen/_14ssp"
                android:text="@string/contest_field_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/contest_sur_name"
                app:layout_constraintTop_toBottomOf="@id/sur_name_txt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:background="@drawable/rounded"
                android:padding="@dimen/_3sdp"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/region_txt"
                app:layout_constraintTop_toBottomOf="@+id/contest_sur_name"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:textColor="@color/Black"
                android:textSize="@dimen/_14ssp"
                android:text="@string/contest_field_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/contest_region"
                android:text="@string/chooseCity"
                app:layout_constraintTop_toBottomOf="@id/region_txt"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:background="@drawable/rounded"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/go_contest"
                android:text="@string/contest"
                android:textColor="@color/White"
                app:layout_constraintTop_toBottomOf="@id/contest_region"
                android:layout_margin="@dimen/_10sdp"
                android:background="@drawable/rounded_yellow"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>