<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/MaltabuGrey">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout25"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline33"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.8" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.2" />

        <ImageView
            android:id="@+id/imgimg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/maltabulogonew_min"
            app:layout_constraintEnd_toStartOf="@+id/guideline33"
            app:layout_constraintStart_toStartOf="@+id/guideline32"
            app:layout_constraintTop_toTopOf="@+id/constraintLayout25" />

        <TextView
            android:id="@+id/forgot_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgetPass"
            android:layout_marginStart="16dp"
            android:visibility="gone"
            android:layout_marginTop="8dp"
            android:padding="@dimen/_12sdp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/MaltabuBlue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_edit_txt" />

        <EditText
            android:id="@+id/login_edit_txt"
            android:layout_width="0dp"
            android:singleLine="true"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:hint="@string/auth3"
            android:maxLines="1"
            android:lines="1"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgimg" />

        <EditText
            android:id="@+id/password_edit_txt"
            android:layout_width="0dp"
            android:gravity="center"
            android:maxLines="1"
            android:hint="@string/reg31"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded"
            android:inputType="textPassword"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_edit_txt" />

        <Button
            android:id="@+id/button_auth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/rounded_green"
            android:text="@string/auth2"
            android:textAllCaps="false"
            android:textColor="@color/White"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgot_button" />

        <TextView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_auth"
            app:layout_constraintBottom_toTopOf="@id/social_block"
            android:text="@string/login_with_social"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:id="@+id/social_block"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_height="@dimen/_50sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintTop_toBottomOf="@id/button_auth"
            app:layout_constraintBottom_toTopOf="@id/button_reg"
            app:layout_constraintStart_toStartOf="parent">
            <ImageView
                android:id="@+id/social_btn_facebook"
                android:src="@drawable/ic_facebook"
                android:visibility="gone"
                android:layout_margin="@dimen/_10sdp"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"/>
            <ImageView
                android:id="@+id/social_btn_google"
                android:src="@drawable/ic_google"
                android:layout_margin="@dimen/_10sdp"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"/>
        </LinearLayout>

        <Button
            android:id="@+id/button_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded"
            android:text="@string/auth4"
            android:textAllCaps="false"
            android:textColor="@color/Black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>